--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,15 @@
-<app-header />
-<main class="w-[90%] max-w-4xl mx-10 my-0 flex items-center justify-between gap-8">
-  <ul>
-    <li>
-      <app-user />
-    </li>
-  </ul>
-</main>
+<div class="flex flex-col justify-center">
+  <app-header />
+  <main class="w-[90%] max-w-4xl mx-auto my-0 grid grid-cols-[1fr_2fr] gap-8">
+    <ul>
+      <li>
+        <app-user />
+      </li>
+    </ul>
+    <ul>
+      <li>
+        <app-user />
+      </li>
+    </ul>
+  </main>
+</div>
