--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,16 @@
-<div class="flex flex-col justify-center">
-  <app-header />
-  <main class="w-[90%] max-w-4xl mx-auto my-0 grid grid-cols-[1fr_2fr] gap-8">
-    <ul class="flex flex-col gap-2">
-      @for (user of users; track user.id) {
-      <li>
-        <app-user [user]="user" (select)="onSelectUser($event)" />
-      </li>
-      }
-    </ul>
-
-    @if (selectedUserName) {
-    <app-tasks [selectedUserName]="selectedUserName" />
-    } @else {
-    <h3 class="text-3xl font-medium">Selecione um usuário</h3>
+<app-header />
+<main class="w-[90%] max-w-4xl mx-auto my-0 grid grid-cols-[1fr_2fr] gap-8">
+  <ul class="flex flex-col gap-2">
+    @for (user of users; track user.id) {
+    <li>
+      <app-user [user]="user" [selected]="selectedUser?.id === user.id" (select)="onSelectUser($event)" />
+    </li>
     }
-  </main>
-</div>
+  </ul>
+
+  @if (selectedUser) {
+  <app-tasks [selectedUserName]="selectedUser.name" [selectedUserId]="selectedUser.id" />
+  } @else {
+  <h2 class="text-3xl font-medium">Selecione um usuário</h2>
+  }
+</main>
