--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -1,1 +1,23 @@
-<h1>{{ selectedUserName() }}</h1>
+<section class="p-4 rounded-lg max-h-[60vh] overflow-auto bg-[#3a2c54]">
+  <div class="flex justify-between items-start mb-8 gap-6">
+    <h2 class="text-2xl text-balance font-semibold">Tarefas de {{ selectedUserName() }}</h2>
+    <menu class="m-0 p-0">
+      <button
+        class="cursor-pointer bg-[#9965dd] rounded-md border-none px-2 py-1 text-base text-[#0b0519] hover:bg-[#a565dd] active:bg-[#a565dd]"
+      >
+        +
+      </button>
+    </menu>
+  </div>
+
+  <ul class="mx-4 p-0 flex flex-col gap-4 max-height-[50vh] overflow-auto">
+    @if (selectedUserTasks().length) { @for (task of selectedUserTasks(); track task.id) {
+    <app-task [taskData]="task" (completeTask)="onCompleteTask($event)" />
+    } } @else {
+    <p>
+      O usuário selecionado não tem tarefas atribuídas a ele. <br />
+      Tente atribuir uma tarefa no botão "+" acima!
+    </p>
+    }
+  </ul>
+</section>
