--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,7 +1,8 @@
 <div class="rounded-lg shadow-sm overflow-hidden">
   <button
     (click)="onSelectUser()"
-    class="flex items-center gap-2 p-2 bg-[#433352] text-[#c3b3d1] border-none cursor-pointer w-full min-w-40 text-left hover:bg-[#9965dd] active:bg-[#9965dd] hover:text-[#150722] active:text-[#150722]"
+    [class.active]="selected()"
+    class="flex items-center gap-2 p-2 bg-[#433352] text-[#c3b3d1] border-none cursor-pointer w-full min-w-40 text-left hover:bg-[#9965dd] active:bg-[#9965dd] hover:text-[#150722] active:text-[#150722] transition-all ease-linear duration-100"
   >
     <img class="w-8 object-contain rounded-full shadow-sm" [src]="imgPath()" [alt]="user().avatar" />
     <span class="m-0 p-0 text-sm font-normal">{{ user().name }}</span>
