--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -24,5 +24,5 @@
 </section>
 
 @if (isAddingTask()) {
-<app-new-task (cancel)="onCancelNewTask()" (add)="onAddNewTask($event)" />
+<app-new-task (close)="onCloseNewTask()" [selectedUserId]="selectedUserId()" />
 }
