feat: add local storage integration to store tasks

--- a/src/app/components/tasks/new-task/new-task.component.html
+++ b/src/app/components/tasks/new-task/new-task.component.html
@@ -1,17 +1,17 @@
 <!-- eslint-disable @angular-eslint/template/interactive-supports-focus -->
 <!-- eslint-disable @angular-eslint/template/click-events-have-key-events -->
-<div (click)="onCloseNewTask()" class="bg-black bg-opacity-90 fixed top-0 left-0 w-full h-screen"></div>
+<div (click)="onCloseNewTask()" class="fixed left-0 top-0 h-screen w-full bg-black bg-opacity-90"></div>
 <dialog
   open
-  class="w-[90%] max-w-[30rem] bg-[#433352] rounded-md border-none shadow-md overflow-hidden p-4 md:p-8 top-20"
+  class="top-20 w-[90%] max-w-[30rem] overflow-hidden rounded-md border-none bg-[#433352] p-4 shadow-md md:p-8"
 >
-  <h2 class="text-[#d0c2e1] text-xl font-semibold pb-4">Adicionar tarefa</h2>
+  <h2 class="pb-4 text-xl font-semibold text-[#d0c2e1]">Adicionar tarefa</h2>
   <form class="flex flex-col gap-4" (ngSubmit)="onSubmit()">
     <p>
-      <label class="block font-bold text-sm text-[#d0c2e1]" for="title">Título</label>
+      <label class="block text-sm font-bold text-[#d0c2e1]" for="title">Título</label>
       <input
         required
-        class="w-full p-[0.15rem_0.25rem] rounded-md border-[1px_solid_#ab9ac0] bg-[#d0c2e1]"
+        class="w-full rounded-md border-[1px_solid_#ab9ac0] bg-[#d0c2e1] p-[0.15rem_0.25rem]"
         type="text"
         id="title"
         name="title"
@@ -20,10 +20,10 @@
     </p>
 
     <p>
-      <label class="block font-bold text-sm text-[#d0c2e1]" for="summary">Descrição</label>
+      <label class="block text-sm font-bold text-[#d0c2e1]" for="summary">Descrição</label>
       <textarea
         required
-        class="w-full p-[0.15rem_0.25rem] rounded-md border-[1px_solid_#ab9ac0] bg-[#d0c2e1]"
+        class="w-full rounded-md border-[1px_solid_#ab9ac0] bg-[#d0c2e1] p-[0.15rem_0.25rem]"
         id="summary"
         rows="5"
         name="summary"
@@ -32,10 +32,10 @@
     </p>
 
     <p>
-      <label class="block font-bold text-sm text-[#d0c2e1]" for="due-date">Vencimento</label>
+      <label class="block text-sm font-bold text-[#d0c2e1]" for="due-date">Vencimento</label>
       <input
         required
-        class="w-full p-[0.15rem_0.25rem] rounded-md border-[1px_solid_#ab9ac0] bg-[#d0c2e1]"
+        class="w-full rounded-md border border-[#ab9ac0] bg-[#d0c2e1] p-[0.15rem_0.25rem] text-[#433352]"
         type="date"
         id="due-date"
         name="due-date"
@@ -45,14 +45,14 @@
 
     <p class="m-[1rem_0_0] flex justify-end gap-1">
       <button
-        class="cursor-pointer border-none py-1 px-5 rounded-sm bg-transparent text-[#bdadcf] hover:text-[#d0c2e1] active:text-[#d0c2e1]"
+        class="cursor-pointer rounded-sm border-none bg-transparent px-5 py-1 text-[#bdadcf] hover:text-[#d0c2e1] active:text-[#d0c2e1]"
         type="button"
         (click)="onCloseNewTask()"
       >
         Cancelar
       </button>
       <button
-        class="cursor-pointer border-none py-1 px-5 rounded-sm bg-[#9c73ca] shadow-sm transition-all ease-linear duration-100 hover:bg-[#895cce] hover:shadow-md active:bg-[#895cce] active:shadow-md text-[#d0c2e1] font-medium"
+        class="cursor-pointer rounded-sm border-none bg-[#9c73ca] px-5 py-1 font-medium text-[#2d2138] shadow-sm transition-all duration-100 ease-linear hover:bg-[#895cce] hover:shadow-md active:bg-[#895cce] active:shadow-md"
         type="submit"
       >
         Atribuir tarefa
