--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,6 @@
 :host {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  display: block;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
 }
