--- a/src/app/components/tasks/task/task.component.html
+++ b/src/app/components/tasks/task/task.component.html
@@ -1,15 +1,15 @@
 <li>
   <app-card>
-    <article class="px-4 py-8 text-[#25113d] bg-[#bf9ee5]">
-      <h2 class="text-xl text-balance font-semibold">{{ taskData().title }}</h2>
-      <time class="text-[#3c2c50] text-right text-base mt-1 mb-4 block">{{
-        taskData().dueDate | date : 'dd/MM/yyyy'
+    <article class="bg-[#bf9ee5] px-4 py-8 text-[#25113d]">
+      <h2 class="text-balance text-xl font-semibold">{{ taskData().title }}</h2>
+      <time class="mb-4 mt-1 block text-right text-base text-[#3c2c50]">{{
+        taskData().dueDate | date: 'dd/MM/yyyy'
       }}</time>
       <p class="mb-8">{{ taskData().summary }}</p>
       <p class="text-right">
         <button
           (click)="onCompleteTask()"
-          class="text-sm cursor-pointer bg-[#380774] text-[#decdf2] rounde-sm py-2 px-6 rounded-md shadow-sm transition-all ease-linear duration-150 hover:bg-[#4a0774] hover:shadow-lg active:bg-[#4a0774] active:shadow-lg"
+          class="rounde-sm cursor-pointer rounded-md bg-[#380774] px-6 py-2 text-sm text-[#decdf2] shadow-sm transition-all duration-150 ease-linear hover:bg-[#4a0774] hover:shadow-lg active:bg-[#4a0774] active:shadow-lg"
         >
           Concluir tarefa
         </button>
