--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 body {
   font-family: 'Poppins', sans-serif;
   background: radial-gradient(circle at top left, #181023, #0b0519);
   color: #c3b3d8;
-  height: 100%;
+  height: 100vh;
 }
